[gd_scene load_steps=2 format=3 uid="uid://login_screen_uid"]

[ext_resource type="Script" path="res://ui/LoginScreen.gd" id="1"]

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "üéÆ TOP DOWN SHOOTER MP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Sistema de Autentica√ß√£o"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Login" type="MarginContainer" parent="VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Login"]
layout_mode = 2

[node name="UsernameLabel" type="Label" parent="VBoxContainer/TabContainer/Login/VBoxContainer"]
layout_mode = 2
text = "Nome de Usu√°rio:"

[node name="UsernameInput" type="LineEdit" parent="VBoxContainer/TabContainer/Login/VBoxContainer"]
layout_mode = 2
placeholder_text = "Digite seu usu√°rio"
max_length = 20

[node name="PasswordLabel" type="Label" parent="VBoxContainer/TabContainer/Login/VBoxContainer"]
layout_mode = 2
text = "Senha:"

[node name="PasswordInput" type="LineEdit" parent="VBoxContainer/TabContainer/Login/VBoxContainer"]
layout_mode = 2
placeholder_text = "Digite sua senha"
secret = true
max_length = 50

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/TabContainer/Login/VBoxContainer"]
layout_mode = 2

[node name="LoginButton" type="Button" parent="VBoxContainer/TabContainer/Login/VBoxContainer"]
layout_mode = 2
text = "üîê ENTRAR"

[node name="StatusLabel" type="Label" parent="VBoxContainer/TabContainer/Login/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cadastro" type="MarginContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Cadastro"]
layout_mode = 2

[node name="UsernameLabel" type="Label" parent="VBoxContainer/TabContainer/Cadastro/VBoxContainer"]
layout_mode = 2
text = "Nome de Usu√°rio:"

[node name="UsernameInput" type="LineEdit" parent="VBoxContainer/TabContainer/Cadastro/VBoxContainer"]
layout_mode = 2
placeholder_text = "3-20 caracteres (letras, n√∫meros, _)"
max_length = 20

[node name="EmailLabel" type="Label" parent="VBoxContainer/TabContainer/Cadastro/VBoxContainer"]
layout_mode = 2
text = "Email (opcional):"

[node name="EmailInput" type="LineEdit" parent="VBoxContainer/TabContainer/Cadastro/VBoxContainer"]
layout_mode = 2
placeholder_text = "seu@email.com"

[node name="PasswordLabel" type="Label" parent="VBoxContainer/TabContainer/Cadastro/VBoxContainer"]
layout_mode = 2
text = "Senha:"

[node name="PasswordInput" type="LineEdit" parent="VBoxContainer/TabContainer/Cadastro/VBoxContainer"]
layout_mode = 2
placeholder_text = "M√≠nimo 6 caracteres"
secret = true
max_length = 50

[node name="ConfirmPasswordLabel" type="Label" parent="VBoxContainer/TabContainer/Cadastro/VBoxContainer"]
layout_mode = 2
text = "Confirmar Senha:"

[node name="ConfirmPasswordInput" type="LineEdit" parent="VBoxContainer/TabContainer/Cadastro/VBoxContainer"]
layout_mode = 2
placeholder_text = "Digite a senha novamente"
secret = true
max_length = 50

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/TabContainer/Cadastro/VBoxContainer"]
layout_mode = 2

[node name="RegisterButton" type="Button" parent="VBoxContainer/TabContainer/Cadastro/VBoxContainer"]
layout_mode = 2
text = "‚ú® CRIAR CONTA"

[node name="StatusLabel" type="Label" parent="VBoxContainer/TabContainer/Cadastro/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

